# tool-loop-guard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tool_loop_guard/: __init__.py
tests/: test_guard.py
